# Swindle

./: .env.example  .gitignore  README.md  requirements.txt
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260614_0001_initial_persistence.py  20260614_0002_add_game_final_fen.py  20260615_0003_add_suggested_posts.py  20260615_0004_add_cloud_eval_cache.py  20260615_0005_add_published_posts.py  20260615_0006_add_lightweight_social.py  20260617_0007_add_card_theme_to_published_posts.py  20260617_0008_add_card_size_to_published_posts.py  20260618_0009_add_game_sessions.py  20260618_0010_add_chesscom_accounts.py
backend/app/: __init__.py  main.py  models.py
backend/app/core/: config.py  database.py  security.py
backend/app/games/: __init__.py  analysis.py  chesscom_import.py  lichess_import.py  pgn_parser.py  repository.py  routes.py  schemas.py
backend/app/integrations/chesscom/: client.py  routes.py  schemas.py  service.py
backend/app/integrations/lichess/: __init__.py  (+4 more)
backend/app/prototype/: __init__.py  routes.py
backend/app/publishing/: routes.py  service.py
backend/app/sessions/: processor.py  routes.py
backend/app/share_cards/: __init__.py  schemas.py
backend/app/story/: __init__.py  detectors.py  processor.py  routes.py  schemas.py  scoring.py  templates.py
backend/tests/: conftest.py  test_chesscom_import.py  test_cloud_eval_analysis.py  test_lichess_oauth_import.py  test_pgn_parser.py  test_prototype_api.py  test_sessions.py  test_share_cards.py  test_social_layer.py  test_story_processor.py
(+31 files in other folders)
